--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </dl>
     
     <form>
-       <input type="radio" id="en" name="nextLang" value="en" checked>
+      <input type="radio" id="mute" name="nextLang" value="mute" checked>
+        음성 끄기
+      <input type="radio" id="en" name="nextLang" value="en" >
          영어
       <input type="radio" id="ko" name="nextLang" value="ko">
          한국어 
