--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
       <input type="text" class="txt" value="Hydrogen"/>
       <button type="submit" id="play">듣기</button>
       <input type="button" id="playNext" value="차례로 듣기"/>
+      <select name="voiceSelect" id="voice"></select>
+       <label for="rate">음성 속도</label> 
+      <input type="range" id="rate" name="voiceRate" min="0.1" max="1" step="0.1" />
     </form>
   
+      
     <script src="sketch.js"></script>
   </body>
 </html>
