음성 옵션 순서 조정

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     </dl>
     
     <form>
-      <input type="radio" id="mute" name="nextLang" value="mute" checked>
-        음성 끄기
-      <input type="radio" id="en" name="nextLang" value="en" >
+      <input type="radio" id="en" name="nextLang" value="en">
          영어
-      <input type="radio" id="ko" name="nextLang" value="ko">
+      <input type="radio" id="ko" name="nextLang" value="ko" checked>
          한국어 
        <input type="radio" id="koDesc" name="nextLang" value="koDesc">
-         한국어(설명 포함) <br>
+         한국어(설명 포함) 
+       <input type="radio" id="mute" name="nextLang" value="mute">
+        음성 끄기
+      <br>
      <input type="checkbox" id="check1" /> 클릭할 때마다 영어/한국어 원소 이름 번갈아 듣기<br>
     
       <input type="text" class="txt" value="Hydrogen"/>
