설명 영상 링크 추가

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h3>주기율표(Periodic Table) 118개의 원소 이름 듣고 따라하기</h3> 
+    <h2>주기율표(Periodic Table) 랑 친해지기 <a href=http://new.kcsnet.or.kr/periodictable target="_blank">[설명 영상] </a></h2> 
     
     <dl>
       <dt id=dt1>*원소번호 [기호] 원소 이름 </dt>
-    <dd id=dd1>*원소 특징 한마디</dd>
+      <dd id=dd1>: 간략한 특징 요약 </a></dd>
     </dl>
     
     <form>
