--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         음성 끄기
       <br>
       <input type="checkbox" id="check1" /> 클릭할 때마다 영어/한국어 원소 이름 번갈아 듣기
-      <input type="checkbox" id="check2" /> 마우스 위치의 원소 자동 표시
+      <input type="checkbox" id="check2" /> 마우스 위치의 원소 이온 표시
       <br>
     
       <input type="text" class="txt" value="Hydrogen"/>
