--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h3>주기율표(Periodic Table) 랑 친해지기 <a href=http://new.kcsnet.or.kr/periodictable target="_blank">[설명 영상] </a></h2> 
+    <h3>주기율표(Periodic Table) 랑 친해지기 <a href=http://new.kcsnet.or.kr/periodictable target="_blank">[주기율표 설명 영상] </a></h2> 
     <form>
       <input type="radio" id="en" name="nextLang" value="en">
          영어
