--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <input type="text" class="txt" value="Hydrogen"/>
       <button type="submit" id="play">듣기</button>
       <input type="button" id="playNext" value="차례로 듣기"/>
+      <input type="button" id="search" value="찾기"/>
       <select name="voiceSelect" id="voice"></select>
        <label for="rate">음성 속도</label> 
       <input type="range" id="rate" name="voiceRate" min="0.5" max="1" step="0.1" />
