주기율표 개요/설명 추가

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
       <input type="range" id="rate" name="voiceRate" min="0.5" max="1" step="0.1" />
     </form>
      <details>
-  <summary id=dt1>*원소번호 [기호] 원소 이름 </summary>
-  <p id=dd1>: 간략한 특징 요약 </p>
+  <summary id=dt1>주기율표 </summary>
+  <p id=dd1> 원자는 양성자와 중성자로 이루어진 원자햑과 그 주위를 도는 전자로 되어 있다. 118개의 모든 원소를 원자핵에 들어있는 양성자 수가 커지는 순서대로 분류한 것이 주기율표이다. 
+       현재까지 발견된 118개의 원소를 7주기(가로줄).18족(세로줄)로 나열된 주기율표에서 같은 족 원소는 가장 바깥쪽 껍질의 전자 수가 같기 때문에 서로 성질이 비슷하다. 
+       예를 들어, 리튬이온 배터리 전지의 재료인 비싼 리튬 대신에 같은 1족인 나트륨과 칼륨이 배터리 소재로 연구되고 있다. (출처: 뉴턴 2022년 10월호)</p>
 </details>
 
     <script src="sketch.js"></script>
